--- a/css/quem_somos.css
+++ b/css/quem_somos.css
@@ -4,15 +4,23 @@
 
 
 body{
+    background-color: white;
+}
+
+.navbar{
     background-color: steelblue;
 }
 
 .container{
-    background-color: white;
+    background-color: #F7F7F7;
+}
+
+.nav-link{
+    font-weight: bold;
 }
 
 h6{
-    color: #6DB4D6;
+    color: white;
 }
 
 h1{
@@ -53,22 +61,22 @@ iframe{
 
 
 .redes{
-    background-color: #343A40;
+    background-color: steelblue;
     display: flex;
     justify-content: space-between;
     height: 10vh;
     padding: 1.5rem;
     flex-wrap: wrap;
-    color: #6C757D;
+    color: white;
 
 }
 
 .conteudo{
     display: flex;
-    background-color: #343A40;
+    background-color: steelblue;
     justify-content: center;
     flex-wrap: wrap;
-    color: #6C757D;   
+    color: white;   
 }
 
 .farma{
@@ -76,11 +84,13 @@ iframe{
     text-align: center;
     margin-right: 3%;
     margin-bottom: 20px;
+    
 }
 
 #texto{
     width: 50%;
     margin: 0 auto;
+    line-height: 2em;
 }
 
 .servicos{
@@ -91,7 +101,7 @@ iframe{
 }
 
 .servicos a{
-    color: #6C757D;
+    color: white;
 }
 
 .institucional{
@@ -102,7 +112,7 @@ iframe{
 }
 
 .institucional a{
-    color: #6C757D;
+    color: white;
 }
 
 .privacidade{
@@ -113,16 +123,16 @@ iframe{
 }
 
 .privacidade a{
-    color: #6C757D;
+    color: white;
 }
 
 .copi{
     height: 7vh;
     text-align: center;
     padding: 1rem;
-    background-color: #31373D;
+    background-color: steelblue;
 }
 
 .copi p{
-    color: #6C757D;
+    color: white;
 }
