--- a/css/print.css
+++ b/css/print.css
@@ -1,9 +1,17 @@
 body{
-    background-color: steelblue;
+    background-color: white;
 }
 
 .container{
-    background-color: white;
+    background-color: #F7F7F7;
+}
+
+.navbar{
+    background-color: steelblue;
+}
+
+.nav-link{
+    font-weight: bold;
 }
 
 h1{
@@ -14,23 +22,27 @@ h2{
     color: #0F4263;
 }
 
+h6{
+    color: white;
+}
+
 .redes{
-    background-color: #343A40;
+    background-color: steelblue;
     display: flex;
     justify-content: space-between;
     height: 10vh;
     padding: 1.5rem;
     flex-wrap: wrap;
-    color: #6C757D;
+    color: white;
 
 }
 
 .conteudo{
     display: flex;
-    background-color: #343A40;
+    background-color: steelblue;
     justify-content: center;
     flex-wrap: wrap;
-    color: #6C757D;   
+    color: white;   
 }
 
 .farma{
@@ -38,11 +50,13 @@ h2{
     text-align: center;
     margin-right: 3%;
     margin-bottom: 20px;
+    
 }
 
 #texto{
     width: 50%;
     margin: 0 auto;
+    line-height: 2em;
 }
 
 .servicos{
@@ -53,7 +67,7 @@ h2{
 }
 
 .servicos a{
-    color: #6C757D;
+    color: white;
 }
 
 .institucional{
@@ -64,7 +78,7 @@ h2{
 }
 
 .institucional a{
-    color: #6C757D;
+    color: white;
 }
 
 .privacidade{
@@ -75,16 +89,16 @@ h2{
 }
 
 .privacidade a{
-    color: #6C757D;
+    color: white;
 }
 
 .copi{
     height: 7vh;
     text-align: center;
     padding: 1rem;
-    background-color: #31373D;
+    background-color: steelblue;
 }
 
 .copi p{
-    color: #6C757D;
+    color: white;
 }
