--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
+
+
 *{
     scroll-behavior: smooth;
+    
 }
 /*Estilos do rodapé: linha 68 à 139*/
 
 
-
-
-.navbar{
-    background-color: blueviolet;
+.destaque{
+    font-family: 'Anton', sans-serif
 }
 
-body{
+.mais_vendidos{
+    font-family: 'Anton', sans-serif
+}
+
+.ofertar_especiais{
+    font-family: 'Anton', sans-serif
+}
+
+.navbar{
     background-color: steelblue;
 }
 
-.container{
+.nav-link{
+    font-weight: bold;
+}
+
+body{
     background-color: white;
 }
 
-
+.container{
+    background-color: #F7F7F7;
+}
 
 .controls-top{
     display: flex;
@@ -40,7 +57,7 @@ body{
 }
 
 h6{
-    color: #6DB4D6;
+    color: white;
 }
 
 #subirTopo{
@@ -64,22 +81,22 @@ h6{
 }
 
 .redes{
-    background-color: #343A40;
+    background-color: steelblue;
     display: flex;
     justify-content: space-between;
     height: 10vh;
     padding: 1.5rem;
     flex-wrap: wrap;
-    color: #6C757D;
+    color: white;
 
 }
 
 .conteudo{
     display: flex;
-    background-color: #343A40;
+    background-color: steelblue;
     justify-content: center;
     flex-wrap: wrap;
-    color: #6C757D;   
+    color: white;   
 }
 
 .farma{
@@ -87,11 +104,13 @@ h6{
     text-align: center;
     margin-right: 3%;
     margin-bottom: 20px;
+    
 }
 
 #texto{
     width: 50%;
     margin: 0 auto;
+    line-height: 2em;
 }
 
 .servicos{
@@ -102,7 +121,7 @@ h6{
 }
 
 .servicos a{
-    color: #6C757D;
+    color: white;
 }
 
 .institucional{
@@ -113,7 +132,7 @@ h6{
 }
 
 .institucional a{
-    color: #6C757D;
+    color: white;
 }
 
 .privacidade{
@@ -124,16 +143,16 @@ h6{
 }
 
 .privacidade a{
-    color: #6C757D;
+    color: white;
 }
 
 .copi{
     height: 7vh;
     text-align: center;
     padding: 1rem;
-    background-color: #31373D;
+    background-color: steelblue;
 }
 
 .copi p{
-    color: #6C757D;
+    color: white;
 }
